--- a/CHIP-8-STM32.ioc
+++ b/CHIP-8-STM32.ioc
@@ -103,7 +103,11 @@ PB11.Locked=true
 PB11.Signal=GPIO_Output
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB13.GPIO_PuPd=GPIO_NOPULL
 PB13.Locked=true
+PB13.PinState=GPIO_PIN_RESET
 PB13.Signal=GPIO_Output
 PB14.Locked=true
 PB14.Signal=GPXTI14
